--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,6 @@ h4 {
 	font-size: 24px;
 }
 
-blockquote {
-	margin: 20px 60px;
-	font-family: Helvetica, sans-serif;
-}
-
 header {margin-bottom: 20px;}
 
 /* ensures that your images stretch the width of their containers */
@@ -52,7 +47,6 @@ a:hover { color: black; }
 	grid-template-rows: repeat(20, 1fr);
 	width: 100%;
 	height: 100vh;
-	background-color: red;
 	background: url(../images/helenedwards.jpg);
 	background-attachment:absolute;
 	background-repeat: no-repeat;
@@ -64,41 +58,34 @@ a:hover { color: black; }
 }
 
 .hp_button_one_placement{
-	grid-column: 5 / 6;
-	grid-row: 12 / 13;
-	background-color: yellow;
+	grid-column: 5/ 6;
+	grid-row: 11 / 13;
 
 }
 
 .hp_button_one{
 	width: 10px;
 	height: 10px;
-	background-color:green;
 }
 
 .hp_button_two_placement{
 	grid-column: 6 / 7;
-	grid-row: 12 / 13;
-	background-color: orange;
-
+	grid-row: 11 / 13;
 }
 
 .hp_button_three_placement{
 	grid-column: 7 / 8;
-	grid-row: 12 / 13;
-	background-color: yellow;
+	grid-row: 11 / 13;
 }
 
 .hp_button_four_placement{
 	grid-column: 8 / 9;
-	grid-row: 12 / 13;
-	background-color: orange;
+	grid-row: 11 / 13;
 }
 
 .title{
 	grid-column: 5 / 10;
 	grid-row: 7 / 13;
-	background-color: blue;
 }
 
 .women_center{
@@ -110,7 +97,6 @@ a:hover { color: black; }
 .women{
 display: inline-block;
 text-align: right;
-background-color: purple;
 }
 
 .in{
@@ -135,7 +121,6 @@ background-color: purple;
 	color: white;
 	text-align: right;
 	padding-right: 13px;
-	background-color: purple;
 }
 
 .second_page{
@@ -147,58 +132,86 @@ background-color: purple;
 	background-color: blue;
 }
 
+.second_page_bg_image{
+	background: url(../images/helenedwards.jpg);
+	background-attachment:absolute;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+
+
 .main_icon_placement{
-	grid-column: 1 / 4;
+	grid-column: 1 / 3;
 	grid-row: 1 / 8;
-	background-color: purple;
+
+}
+
+.main_icon{
+	width: 130%;
+	height: auto;
+}
+
+.page_2_buttons{
+	height:100px;
+	width: auto;
+	padding-left: 80px;
 }
 
 .pg2_button_one_placement{
-	grid-column: 1 / 2;
+	grid-column: 1 / 3;
 	grid-row: 9 / 10;
-	background-color: red;
 }
 .pg2_button_two_placement{
-	grid-column: 1 / 2;
+	grid-column: 1 / 3;
 	grid-row: 11 / 12;
-	background-color: yellow;
 }
 
 .pg2_button_three_placement{
-	grid-column: 1 / 2;
+	grid-column: 1 / 3;
 	grid-row: 13 / 14;
-	background-color: red;
 
 }
 .pg2_button_four_placement{
-	grid-column: 1 / 2;
+	grid-column: 1 / 3;
 	grid-row: 15 / 16;
-	background-color: yellow;
 }
 
 .pg2_text_box{
-	grid-column: 3 / 9;
-	grid-row: 8 / 19;
-	background-color: orange;
+	grid-column: 3/ 8;
+	grid-row: 9/ 20;
+	font-family: 'Roboto', sans-serif;
+	font-weight: lighter;
+	padding-top: 20px;
+	padding-right: 20px;
+	font-size:16px;
+	color: white;
+	text-align: left;
+
+
 }
 
 .pg2_title_box{
 	grid-column: 10 / 15;
 	grid-row: 19 / 21;
-	background-color: orange;
+	background-color: red;
+	font-family: 'Roboto', sans-serif;
+	font-weight:bolder;
+	font-size:56px;
+	color: white;
 }
 
-.grid {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-gap: 40px;
-	width: 60%;
-	margin: auto;
+.pg3_button_one_placement{
+	grid-column: 1 / 3;
+	grid-row: 9 / 10;
+	background-color: red;
 }
+
+
+
 
 .grid div {
 	background-color: #ccc;
-	padding: 20px;
 }
 
 @media only screen and (min-width:768px) {
