--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,11 @@ h1 {
 }
 
 h2 {
-	font-size: 36px;
-}
+	font-family: 'Roboto', sans-serif;
+	font-weight: 600;
+	font-size: 16px;
+	letter-spacing: 1px;
+	color: white;}
 
 h3 {
 	font-size: 28px;
@@ -40,6 +43,12 @@ a {
 	text-decoration: none;
 	 }
 a:hover { color: black; }
+
+p{
+	font-size:14px;
+	margin-bottom: 16px;
+	line-height:20px;
+	}
 
 .homepage{
 	display: grid;
@@ -133,79 +142,133 @@ text-align: right;
 }
 
 .second_page_bg_image{
-	background: url(../images/helenedwards.jpg);
+	background: url(../images/helenimage2.jpg);
+	background-attachment:absolute;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.third_page_bg_image{
+	background: url(../images/helenimage2.jpg);
+	background-attachment:absolute;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.fourth_page_bg_image{
+	background: url(../images/helenimage2.jpg);
+	background-attachment:absolute;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+.fifth_page_bg_image{
+	background: url(../images/helenimage2.jpg);
 	background-attachment:absolute;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
 
-
 .main_icon_placement{
 	grid-column: 1 / 3;
-	grid-row: 1 / 8;
-
+	grid-row: 1 / 7;
 }
 
 .main_icon{
-	width: 130%;
+	padding-top: 20px;
+	margin: 0 auto;
+	position absolute;
+	width: 80%;
 	height: auto;
 }
 
 .page_2_buttons{
-	height:100px;
+	height:50px;
 	width: auto;
-	padding-left: 80px;
+	margin-top: 40px;
+	margin-left: 10px;
 }
 
 .pg2_button_one_placement{
-	grid-column: 1 / 3;
-	grid-row: 9 / 10;
+	grid-column: 2 / 3;
+	grid-row: 9/ 10;
 }
+
 .pg2_button_two_placement{
-	grid-column: 1 / 3;
-	grid-row: 11 / 12;
+	grid-column: 2 / 3;
+	grid-row: 10 / 11;
 }
 
 .pg2_button_three_placement{
-	grid-column: 1 / 3;
-	grid-row: 13 / 14;
+	grid-column: 2 / 3;
+	grid-row: 11 / 12;
 
 }
 .pg2_button_four_placement{
-	grid-column: 1 / 3;
-	grid-row: 15 / 16;
+	grid-column: 2 / 3;
+	grid-row: 12/ 13;
 }
 
 .pg2_text_box{
 	grid-column: 3/ 8;
-	grid-row: 9/ 20;
+	grid-row: 5 / 18;
 	font-family: 'Roboto', sans-serif;
 	font-weight: lighter;
 	padding-top: 20px;
 	padding-right: 20px;
-	font-size:16px;
 	color: white;
 	text-align: left;
 
 
 }
 
+.pg3_text_box{
+	grid-column: 3/ 8;
+	grid-row: 5 / 18;
+	font-family: 'Roboto', sans-serif;
+	font-weight: lighter;
+	padding-top: 20px;
+	padding-right: 20px;
+	color: white;
+	text-align: left;
+
+
+}
+
+.pg4_text_box{
+	grid-column: 3/ 8;
+	grid-row: 5 / 18;
+	font-family: 'Roboto', sans-serif;
+	font-weight: lighter;
+	padding-top: 20px;
+	padding-right: 20px;
+	color: white;
+	text-align: left;
+
+
+}
+
+.pg5_text_box{
+	grid-column: 3/ 8;
+	grid-row: 5 / 18;
+	font-family: 'Roboto', sans-serif;
+	font-weight: lighter;
+	padding-top: 20px;
+	padding-right: 20px;
+	color: white;
+	text-align: left;
+
+
+}
 .pg2_title_box{
 	grid-column: 10 / 15;
 	grid-row: 19 / 21;
-	background-color: red;
 	font-family: 'Roboto', sans-serif;
 	font-weight:bolder;
 	font-size:56px;
 	color: white;
 }
 
-.pg3_button_one_placement{
-	grid-column: 1 / 3;
-	grid-row: 9 / 10;
-	background-color: red;
-}
 
 
 
